@@ -1,5 +1,14 @@
 2012-11-25  Nikita Vasilyev  <me@elv1s.ru>
 
+        Web Inspector: remove unused DOM methods
+        https://bugs.webkit.org/show_bug.cgi?id=103204
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/DOMExtension.js:
+
+2012-11-25  Nikita Vasilyev  <me@elv1s.ru>
+
         Web Inspector: Remove unused Array.convert method
         https://bugs.webkit.org/show_bug.cgi?id=103202
 
